@@ -1,3 +1,15 @@
+2012-12-07  Tim Horton  <timothy_horton@apple.com>
+
+        [wk2] WebProcessServiceForWebKitDevelopment should forward stdout and stderr to the UIProcess
+        https://bugs.webkit.org/show_bug.cgi?id=104418
+
+        Reviewed by Simon Fraser.
+
+        * UIProcess/Launcher/mac/ProcessLauncherMac.mm:
+        (WebKit::connectToWebProcessServiceForWebKitDevelopment): Send stdout and stderr file descriptors to the WebProcess.
+        * WebProcessServiceForWebKitDevelopment/WebProcessServiceForWebKitDevelopmentMain.mm:
+        (WebProcessServiceForWebKitDevelopmentEventHandler): Replace the WebProcess' stdout and stderr with those from the UIProcess.
+
 2012-12-07  Sheriff Bot  <webkit.review.bot@gmail.com>
 
         Unreviewed, rolling out r136993.
